--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,3 +4,10 @@ spring:
         url: jdbc:mysql://localhost:3306/big_event
         username: root
         password: 12345678
+
+# logging:
+#   level:
+#     root: INFO
+#     com:
+#         mingkun:
+#             big_event: DEBUG
