Upgrade parameters passing, use ThreadLocal

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,3 +11,7 @@ spring:
 #     com:
 #         mingkun:
 #             big_event: DEBUG
+
+mybatis:
+    configuration:
+        map-underscore-to-camel-case: true # 开启驼峰命名和下划线命名的自动转换
